--- a/package.json
+++ b/package.json
@@ -15,10 +15,17 @@
     "@angular/compiler": "^15.1.0",
     "@angular/core": "^15.1.0",
     "@angular/forms": "^15.1.0",
+    "@angular/google-maps": "^15.2.8",
     "@angular/platform-browser": "^15.1.0",
     "@angular/platform-browser-dynamic": "^15.1.0",
     "@angular/router": "^15.1.0",
+    "@ngx-translate/core": "^14.0.0",
+    "@ngx-translate/http-loader": "^7.0.0",
+    "@types/googlemaps": "^3.43.3",
+    "ngx-skeleton-loader": "^7.0.0",
+    "ngx-spinner": "^15.0.1",
     "rxjs": "~7.8.0",
+    "swiper": "^10.3.1",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
   },
